--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,9 @@ dependencies {
     //google sign library
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    //facebok login library
+    implementation 'com.facebook.android:facebook-android-sdk:[4,5)'
+
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
