--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,6 +31,11 @@ dependencies {
     //google sign library
     implementation 'com.google.android.gms:play-services-auth:17.0.0'
 
+    //picasso library
+    implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //circle image
+    implementation 'de.hdodenhof:circleimageview:2.2.0'
 
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
