--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,15 @@ dependencies {
     //circle image
     implementation 'de.hdodenhof:circleimageview:2.2.0'
 
+    //recyclevie
+    implementation 'androidx.recyclerview:recyclerview:1.2.0-alpha01'
+
+    //library card vie
+    implementation 'androidx.cardview:cardview:1.0.0'
+
+    //circularimage view
+    implementation 'com.github.mohammadatif:CircularImageView:1.0.0'
+
     implementation 'com.google.firebase:firebase-database:19.2.0'
     implementation 'androidx.legacy:legacy-support-v4:1.0.0'
     implementation 'com.google.firebase:firebase-storage:19.1.0'
@@ -44,4 +53,6 @@ dependencies {
     androidTestImplementation 'androidx.test.ext:junit:1.1.1'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0'
     implementation 'com.android.support:design:28.0.0'
+
+
 }
